--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
         <i class="fa-solid fa-user"></i>
         <a href="about.html" class="nav"><span>ABOUT</span></a>
       </div>
-      <div class="box box-l">
+      <div class="box box-l active">
         <i class="fa-solid fa-suitcase"></i>
         <a href="portfolio.html" class="nav"><span>PORTFOLIO</span></a>
       </div>
