--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             <i class="fa-solid fa-house-chimney"></i>
             <a href="home.html" class="nav"><span>HOME</span></a>
         </div>
-        <div class="box">
+        <div class="box active">
             <i class="fa-solid fa-user"></i>
             <a href="about.html" class="nav"><span>ABOUT</span></a>
         </div>
