--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
       </div>
     </div>
     <nav id="navbar">
-      <div class="box">
+      <div class="box active">
           <i class="fa-solid fa-house-chimney"></i>
           <a href="home.html" class="nav"><span>HOME</span></a>
       </div>
