--- a/about.html
+++ b/about.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+
+    <!-- custom css -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- fontawesome cdn -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -13,18 +17,18 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;600&display=swap"
-      rel="stylesheet"
-    />
 </head>
 <body>
+    <!-- animation -->
+    <div class="animation"></div>
+    
+    <!-- header -->
     <header class="title">
         <h1>resume</h1>
         <h2><span>about</span> <span>me</span></h2>
     </header>
+
+    <!-- navbar -->
     <nav id="navbar">
         <div class="box">
             <i class="fa-solid fa-house-chimney"></i>
@@ -46,7 +50,9 @@
             <i class="fa-solid fa-message"></i>
             <a href="blog.html" class="nav"><span>BLOG</span></a>
         </div>
-      </nav>
+    </nav>
+
+    <!-- info -->
     <div id="info">
         <div class="container">
             <div class="info-card">
@@ -89,6 +95,7 @@
         <div class="line"></div>
     </div>
 
+    <!-- exp -->
     <div id="exp">
         <div class="container">
             <h3 class="header">experience & education</h3>
