--- a/home.html
+++ b/home.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
+
+    <!-- fontawesome cdn -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -12,15 +14,15 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <!-- custom css -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;600&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
+    <!-- animation -->
+    <div class="animation"></div>
+
+    <!-- home -->
     <div id="home">
       <div class="color-block"></div>
       <div id="img">
@@ -38,11 +40,13 @@
           building excellent software that improves the lives of those around
           me.
         </p>
-        <a href="#" class="btn"
+        <a href="about.html" class="btn"
           ><span>more about me</span> <i class="fa-solid fa-arrow-right"></i
         ></a>
       </div>
     </div>
+
+    <!-- navbar -->
     <nav id="navbar">
       <div class="box active">
           <i class="fa-solid fa-house-chimney"></i>
