--- a/about.html
+++ b/about.html
@@ -30,7 +30,9 @@
 
     <!-- navbar -->
     <nav id="navbar">
-        <div class="box">
+        <button class="toggle"><i class="fa-solid fa-bars"></i></button>
+        <div class="navbar-menu">
+          <div class="box">
             <i class="fa-solid fa-house-chimney"></i>
             <a href="home.html" class="nav"><span>HOME</span></a>
         </div>
@@ -50,7 +52,8 @@
             <i class="fa-solid fa-message"></i>
             <a href="blog.html" class="nav"><span>BLOG</span></a>
         </div>
-    </nav>
+        </div>
+      </nav>
 
     <!-- info -->
     <div id="info">
@@ -59,14 +62,14 @@
                 <h3 class="header">personal infos</h3>
                 <div class="info-container">
                     <p>first name : <span>Shinn</span></p>
-                    <p>last name : <span>Htet</span></p>
-                    <p>age : <span>21 years</span></p>
-                    <p>nationality : <span>Burmese</span></p>
-                    <p>freelance : <span>Available</span></p>
                     <p>address : <span>Myanmar</span></p>
+                    <p>last name : <span>Htet</span></p>
                     <p>phone : <span>+987654321</span></p>
+                    <p>age : <span>21 years</span></p>
                     <p>email : <span>mile@gmail.com</span></p>
+                    <p>nationality : <span>Burmese</span></p>
                     <p>skype : <span>meliora.shinn</span></p>
+                    <p>freelance : <span>Available</span></p>
                     <p>languages : <span>Myanmar, English</span></p>
                 </div>
                 <a href="#" class="btn">
