--- a/contact.html
+++ b/contact.html
@@ -31,31 +31,35 @@
 
     <!-- navbar -->
     <nav id="navbar">
-      <div class="box">
-        <i class="fa-solid fa-house-chimney"></i>
-        <a href="home.html" class="nav"><span>HOME</span></a>
+      <button class="toggle"><i class="fa-solid fa-bars"></i></button>
+      <div class="navbar-menu">
+        <div class="box">
+          <i class="fa-solid fa-house-chimney"></i>
+          <a href="home.html" class="nav"><span>HOME</span></a>
       </div>
       <div class="box">
-        <i class="fa-solid fa-user"></i>
-        <a href="about.html" class="nav"><span>ABOUT</span></a>
+          <i class="fa-solid fa-user"></i>
+          <a href="about.html" class="nav"><span>ABOUT</span></a>
       </div>
       <div class="box box-l">
-        <i class="fa-solid fa-suitcase"></i>
-        <a href="portfolio.html" class="nav"><span>PORTFOLIO</span></a>
+          <i class="fa-solid fa-suitcase"></i>
+          <a href="portfolio.html" class="nav"><span>PORTFOLIO</span></a>
       </div>
       <div class="box box-l active">
-        <i class="fa-solid fa-envelope"></i>
-        <a href="contact.html" class="nav"><span>CONTACT</span></a>
+          <i class="fa-solid fa-envelope"></i>
+          <a href="contact.html" class="nav"><span>CONTACT</span></a>
       </div>
       <div class="box">
-        <i class="fa-solid fa-message"></i>
-        <a href="blog.html" class="nav"><span>BLOG</span></a>
+          <i class="fa-solid fa-message"></i>
+          <a href="blog.html" class="nav"><span>BLOG</span></a>
+      </div>
       </div>
     </nav>
 
     <!-- contact -->
     <div id="contact">
       <div class="container">
+        
         <div class="contact">
           <h3 class="header">don't be shy!</h3>
           <p class="para">
@@ -80,6 +84,7 @@
             <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
           </div>
         </div>
+
         <div class="form">
             <input type="text" placeholder="YOUR NAME">
             <input type="email" placeholder="YOUR EMAIL">
