--- a/portfolio.html
+++ b/portfolio.html
@@ -30,25 +30,28 @@
 
     <!-- navbar -->
     <nav id="navbar">
-      <div class="box">
-        <i class="fa-solid fa-house-chimney"></i>
-        <a href="home.html" class="nav"><span>HOME</span></a>
+      <button class="toggle"><i class="fa-solid fa-bars"></i></button>
+      <div class="navbar-menu">
+        <div class="box">
+          <i class="fa-solid fa-house-chimney"></i>
+          <a href="home.html" class="nav"><span>HOME</span></a>
       </div>
       <div class="box">
-        <i class="fa-solid fa-user"></i>
-        <a href="about.html" class="nav"><span>ABOUT</span></a>
+          <i class="fa-solid fa-user"></i>
+          <a href="about.html" class="nav"><span>ABOUT</span></a>
       </div>
       <div class="box box-l active">
-        <i class="fa-solid fa-suitcase"></i>
-        <a href="portfolio.html" class="nav"><span>PORTFOLIO</span></a>
+          <i class="fa-solid fa-suitcase"></i>
+          <a href="portfolio.html" class="nav"><span>PORTFOLIO</span></a>
       </div>
       <div class="box box-l">
-        <i class="fa-solid fa-envelope"></i>
-        <a href="contact.html" class="nav"><span>CONTACT</span></a>
+          <i class="fa-solid fa-envelope"></i>
+          <a href="contact.html" class="nav"><span>CONTACT</span></a>
       </div>
       <div class="box">
-        <i class="fa-solid fa-message"></i>
-        <a href="blog.html" class="nav"><span>BLOG</span></a>
+          <i class="fa-solid fa-message"></i>
+          <a href="blog.html" class="nav"><span>BLOG</span></a>
+      </div>
       </div>
     </nav>
 
