--- a/home.html
+++ b/home.html
@@ -48,7 +48,9 @@
 
     <!-- navbar -->
     <nav id="navbar">
-      <div class="box active">
+      <button class="toggle"><i class="fa-solid fa-bars"></i></button>
+      <div class="navbar-menu">
+        <div class="box active">
           <i class="fa-solid fa-house-chimney"></i>
           <a href="home.html" class="nav"><span>HOME</span></a>
       </div>
@@ -68,6 +70,18 @@
           <i class="fa-solid fa-message"></i>
           <a href="blog.html" class="nav"><span>BLOG</span></a>
       </div>
+      </div>
     </nav>
+
+    <!-- toggle -->
+    <div id="toggle">
+      <a class="toggle-nav"><i class="fa-solid fa-house-chimney"></i>home</a>
+      <a class="toggle-nav"><i class="fa-solid fa-user"></i>about</a>
+      <a class="toggle-nav"><i class="fa-solid fa-suitcase"></i>portfolio</a>
+      <a class="toggle-nav"><i class="fa-solid fa-envelope"></i>contact</a>
+      <a class="toggle-nav"><i class="fa-solid fa-message"></i>blog</a>
+    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
