--- a/home.html
+++ b/home.html
@@ -50,6 +50,9 @@
     <nav id="navbar">
       <button class="toggle"><i class="fa-solid fa-bars"></i></button>
       <div class="navbar-menu">
+        <div class="box">
+          <i class="fa-solid fa-moon" id="icon"></i>
+      </div>
         <div class="box active">
           <i class="fa-solid fa-house-chimney"></i>
           <a href="home.html" class="nav"><span>HOME</span></a>
